chat-bff refactors
